Add JWT-based authentication and refactor with Lombok
Introduce JWT configuration, token service, and authentication controller. Refactor DTOs and entities using Lombok to reduce boilerplate. Enhance security with password encoding, authentication manager, and updated filter chain.